src/OpenCvSharpExtern/core_UMat.h

CVAPI(ExceptionStatus) core_UMat_checkVector(
    cv::UMat* self,
    int elemChannels,
    int depth,
    int requireContinuous,
    int* returnValue)
{
    return cvTry([&] {
        *returnValue = self->checkVector(elemChannels, depth, requireContinuous != 0);
    });
}
CVAPI(ExceptionStatus) core_UMat_flags(cv::UMat* self, int* returnValue)
{
    return cvTry([&] {
        *returnValue = self->flags;
    });
}
CVAPI(ExceptionStatus) core_UMat_dims(cv::UMat* self, int* returnValue)
{
    return cvTry([&] {
        *returnValue = self->dims;
    });
}
CVAPI(ExceptionStatus) core_UMat_rows(cv::UMat* self, int* returnValue)
{
    return cvTry([&] {
        *returnValue = self->rows;
    });
}
CVAPI(ExceptionStatus) core_UMat_cols(cv::UMat* self, int* returnValue)
{
    return cvTry([&] {
        *returnValue = self->cols;
    });
}
CVAPI(ExceptionStatus) core_UMat_size(cv::UMat* self, interop::Size* returnValue)
{
    return cvTry([&] {
        // See core_Mat_size: avoid OpenCV 5's dims <= 2 assert for multi-dimensional matrices.
        if (self->dims > 2)
            *returnValue = c(cv::Size(self->size[1], self->size[0]));
        else
            *returnValue = c(self->size());
    });
}
CVAPI(ExceptionStatus) core_UMat_sizeAt(
    cv::UMat* self,
    int i,
    int* returnValue)
{
    return cvTry([&] {
        *returnValue = self->size[i];
    });
}
CVAPI(ExceptionStatus) core_UMat_step(cv::UMat* self, size_t* returnValue)
{
    return cvTry([&] {
        *returnValue = self->step;
    });
}
CVAPI(ExceptionStatus) core_UMat_stepAt(
    cv::UMat* self,
    int i,
    size_t* returnValue)
{
    return cvTry([&] {
        *returnValue = self->step[i];
    });
}